# poker_ai_coach

./: .dockerignore  .env.example  .gitignore  AGENTS.MD  COACHING_PRINCIPLES.MD  DEVELOPMENTS.MD  Dockerfile.backend  MANUAL_QA.md  README.md  docker-compose.yml  package.json  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  deploy-yandex.yml  docker-release.yml
backend/poker_ai_coach/: __init__.py  config.py  main.py
backend/poker_ai_coach/agent/: __init__.py  db_description.py  deep_jobs.py  runtime.py  tool_registry.py
backend/poker_ai_coach/api/: coach.py  database.py  hands.py  health.py  reports.py  study.py  tournaments.py  training.py
backend/poker_ai_coach/coach/: __init__.py  adapters.py  mock_adapter.py  openai_adapter.py  principles.py  prompts.py  service.py
backend/poker_ai_coach/db/: error_messages.py  hm3_connection.py  schema_overview.py  schema_probe.py
backend/poker_ai_coach/models/: coach.py  database.py  hands.py  reports.py  study.py  tournaments.py  training.py
backend/poker_ai_coach/reports/: coach_scout.py  (+7 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  styles.css
tests/: conftest.py  test_agent_runtime.py  test_api.py  test_coach.py  test_coach_scout.py  test_deep_leaks.py  test_hand_review_queue.py  test_hm3_player_stats.py  test_leak_finder.py  test_openai_adapter.py  test_reports_overview.py  test_schema_overview.py  test_schema_probe.py  test_study_plan.py  test_tournaments.py  test_training_state.py
(+25 files in other folders)
